[package]
name = "geojson"
description = "Read and write GeoJSON vector geographic data"
version = "0.24.2"
authors = ["The GeoRust Developers <mods@georust.org>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/georust/geojson"
readme = "README.md"
documentation = "https://docs.rs/geojson/"
keywords = ["geojson", "gis", "json", "geo"]
edition = "2024"

[features]
default = ["geo-types"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
serde_with = "3.15.1"
geo-types = { version = "0.7.13", features = ["serde"], optional = true }
thiserror = "2.0.12"
tracing = "0.1.41"
specta = { version = "=2.0.0-rc.22", features = [
    "derive",
    "export",
    "function",
    "indexmap",
    "serde",
    "serde_json",
    "time",
    "tokio",
    "ulid",
    "url",
] }

[dev-dependencies]
num-traits = "0.2"
criterion = "0.7.0"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "serialize"
harness = false

[[bench]]
name = "to_geo_types"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
